@@ -56,9 +56,7 @@ Rversion.h: $(R_HOME)/VERSION $(R_HOME)/SVN-REVISION $(R_HOME)/tools/GETVERSION
 	@sh $(R_HOME)/tools/GETVERSION > $@
 
 Rmath.h0: Rmath.h0.in $(R_HOME)/VERSION Makefile.win
-	@$(SED) -e 's/@RMATH_HAVE_LOG1P@/# define HAVE_LOG1P 1/'  \
-	  -e 's/@RMATH_HAVE_EXPM1@/# define HAVE_EXPM1 1/'  \
-	  -e 's/@RMATH_HAVE_HYPOT@/# define HAVE_HYPOT 1/'  \
+	@$(SED) -e \
 	  -e  's/@RMATH_HAVE_WORKING_LOG1P@/# define HAVE_WORKING_LOG1P 1/' \
 	  -e "s/@PACKAGE_VERSION@/`sed 's/\([^ ]*\).*/\1/' < $(R_HOME)/VERSION`/" $< > Rmath.h0
 
