@@ -1,6 +1,6 @@
 /* -*- C -*-
  *  Mathlib : A C Library of Special Functions
- *  Copyright (C) 1998-2017  The R Core Team
+ *  Copyright (C) 1998-2018  The R Core Team
  *  Copyright (C) 2004       The R Foundation
  *
  *  This program is free software; you can redistribute it and/or modify
@@ -55,22 +55,22 @@ using namespace std;
 #define R_VERSION_STRING "@PACKAGE_VERSION@"
 
 #ifndef HAVE_EXPM1
-@RMATH_HAVE_EXPM1@
+# define HAVE_EXPM1 1
 #endif
 
 #ifndef HAVE_HYPOT
-@RMATH_HAVE_HYPOT@
+# define HAVE_HYPOT 1
 #endif
 
 #ifndef HAVE_LOG1P
-@RMATH_HAVE_LOG1P@
+# define HAVE_LOG1P 1
 #endif
 
 #ifndef HAVE_WORKING_LOG1P
 @RMATH_HAVE_WORKING_LOG1P@
 #endif
 
-#if defined(HAVE_LOG1P) && !defined(HAVE_WORKING_LOG1P)
+#if !defined(HAVE_WORKING_LOG1P)
 /* remap to avoid problems with getting the right entry point */
 double  Rlog1p(double);
 #define log1p Rlog1p
